kubernetes/addons/ai-training-h200/files/resources-001.yaml
# Source: kubeflow-trainer/charts/jobset/templates/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobset-metrics-service
  namespace: kubeflow-system
  labels:
    app.kubernetes.io/name: jobset
    app.kubernetes.io/instance: ai-training
    app.kubernetes.io/component: controller
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jobset
    app.kubernetes.io/instance: ai-training
    app.kubernetes.io/component: controller
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
---
# Source: kubeflow-trainer/charts/jobset/templates/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobset-webhook-service
  namespace: kubeflow-system
  labels:
    helm.sh/chart: jobset-0.11.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/name: jobset
    app.kubernetes.io/instance: ai-training
    app.kubernetes.io/component: webhook
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jobset
    app.kubernetes.io/instance: ai-training
  ports:
  - name: webhook
    protocol: TCP
    port: 443
    targetPort: webhook
---
# Source: kubeflow-trainer/templates/manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-training-kubeflow-trainer-controller-manager
  namespace: kubeflow-system
  labels:
    helm.sh/chart: kubeflow-trainer-2.2.0
    app.kubernetes.io/name: kubeflow-trainer
    app.kubernetes.io/instance: ai-training
    app.kubernetes.io/version: "2.2.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/component: manager
spec:
  selector:
    app.kubernetes.io/name: kubeflow-trainer
    app.kubernetes.io/instance: ai-training
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/component: manager
  ports:
  - name: monitoring-port
    port: 8443
    targetPort: metrics
  - name: webhook-server
    port: 443
    protocol: TCP
    targetPort: webhook
  - name: status-server
    port: 10443
    targetPort: status-server
    protocol: TCP
---
# Source: kubeflow-trainer/charts/jobset/templates/controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobset-controller
  namespace: kubeflow-system
  labels:
    helm.sh/chart: jobset-0.11.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/name: jobset
    app.kubernetes.io/instance: ai-training
    app.kubernetes.io/component: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jobset
      app.kubernetes.io/instance: ai-training
      app.kubernetes.io/component: controller
  template:
    metadata:
      labels:
        helm.sh/chart: jobset-0.11.0
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: "0.11.0"
        app.kubernetes.io/name: jobset
        app.kubernetes.io/instance: ai-training
        app.kubernetes.io/component: controller
      annotations:
        jobset.x-k8s.io/config-hash: 5bae3fa534a4ae594b0d769c081230501389a6ace28909d8928eb166b8f068aa
    spec:
      containers:
      - name: controller
        image: "registry.k8s.io/jobset/jobset:v0.11.0@sha256:f21cab7d33574502684095b53114fc1b6cb3d83a2d84cd124712899670eab6da"
        imagePullPolicy: IfNotPresent
        command:
        - /manager
        args:
        - --zap-log-level=2
        - --config=/controller_manager_config.yaml
        volumeMounts:
        - name: manager-config
          subPath: controller_manager_config.yaml
          mountPath: /controller_manager_config.yaml
        - name: webhook-cert
          mountPath: /tmp/k8s-webhook-server/serving-certs
          readOnly: true
        ports:
        - name: health-probe
          containerPort: 8081
          protocol: TCP
        - name: webhook
          containerPort: 9443
          protocol: TCP
        - name: metrics
          containerPort: 8443
          protocol: TCP
        livenessProbe:
          httpGet:
            port: 8081
            scheme: HTTP
            path: /healthz
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            port: 8081
            scheme: HTTP
            path: /readyz
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 2
            memory: 4Gi
          requests:
            cpu: 500m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      volumes:
      - name: manager-config
        configMap:
          name: jobset-controller-config
      - name: webhook-cert
        secret:
          secretName: jobset-webhook-server-cert
          defaultMode: 420
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: jobset-controller
---
# Source: kubeflow-trainer/templates/manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-training-kubeflow-trainer-controller-manager
  namespace: kubeflow-system
  labels:
    app.kubernetes.io/name: kubeflow-trainer
    app.kubernetes.io/instance: ai-training
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/component: manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubeflow-trainer
      app.kubernetes.io/instance: ai-training
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/component: manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubeflow-trainer
        app.kubernetes.io/instance: ai-training
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/component: manager
    spec:
      containers:
      - name: manager
        image: ghcr.io/kubeflow/trainer/trainer-controller-manager:v2.2.0@sha256:a4239d836209727b362655b01a3062ca19b5c9e9b0c344d08632c6c7e43cd844
        imagePullPolicy: IfNotPresent
        command:
        - /manager
        args:
        - --config=/controller_manager_config.yaml

        ports:
        - name: health
          containerPort: 8081
          protocol: TCP
        - name: metrics
          containerPort: 8443
          protocol: TCP
        - name: webhook
          containerPort: 9443
          protocol: TCP
        - name: status-server
          containerPort: 10443
          protocol: TCP
        volumeMounts:
        - name: webhook-cert
          mountPath: /tmp/k8s-webhook-server/serving-certs
          readOnly: true
        - name: manager-config
          mountPath: /controller_manager_config.yaml
          subPath: controller_manager_config.yaml
          readOnly: true

        livenessProbe:
          httpGet:
            path: /healthz
            port: health
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 3

        readinessProbe:
          httpGet:
            path: /readyz
            port: health
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 3
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
      volumes:
      - name: webhook-cert
        secret:
          secretName: kubeflow-trainer-webhook-cert
          defaultMode: 420
      - name: manager-config
        configMap:
          name: ai-training-kubeflow-trainer-config
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      serviceAccountName: ai-training-kubeflow-trainer-controller-manager
---
# Source: kubeflow-trainer/charts/jobset/templates/webhook/mutating_webhook_configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: jobset-mutating-webhook-configuration
  labels:
    helm.sh/chart: jobset-0.11.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/name: jobset
    app.kubernetes.io/instance: ai-training
    app.kubernetes.io/component: webhook
webhooks:
- name: mutate-jobset-x-k8s-io-v1alpha2-jobset.x-k8s.io
  admissionReviewVersions:
  - v1
  rules:
  - apiGroups:
    - jobset.x-k8s.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    resources:
    - jobsets
  clientConfig:
    service:
      name: jobset-webhook-service
      namespace: kubeflow-system
      path: /mutate-jobset-x-k8s-io-v1alpha2-jobset
  sideEffects: None
- name: mutate--v1-pod.x-k8s.io
  admissionReviewVersions:
  - v1
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  clientConfig:
    service:
      name: jobset-webhook-service
      namespace: kubeflow-system
      path: /mutate--v1-pod
  objectSelector:
    matchExpressions:
    - key: jobset.sigs.k8s.io/jobset-name
      operator: Exists
  sideEffects: None
---
# Source: kubeflow-trainer/templates/webhook/mutating_webhook_configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: defaulter.trainer.kubeflow.org
  labels:
    helm.sh/chart: kubeflow-trainer-2.2.0
    app.kubernetes.io/name: kubeflow-trainer
    app.kubernetes.io/instance: ai-training
    app.kubernetes.io/version: "2.2.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/component: webhook
webhooks:
- name: defaulter.trainjob.trainer.kubeflow.org
  admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ai-training-kubeflow-trainer-controller-manager
      namespace: kubeflow-system
      path: /mutate-trainer-kubeflow-org-v1alpha1-trainjob
  sideEffects: None
  failurePolicy: Fail
  rules:
  - apiGroups:
    - trainer.kubeflow.org
    apiVersions:
    - v1alpha1
    resources:
    - trainjobs
    operations:
    - CREATE
    - UPDATE
---
# Source: kubeflow-trainer/charts/jobset/templates/webhook/validating_webhook_configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: jobset-validating-webhook-configuration
  labels:
    helm.sh/chart: jobset-0.11.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/name: jobset
    app.kubernetes.io/instance: ai-training
    app.kubernetes.io/component: webhook
webhooks:
- name: validate-jobset-x-k8s-io-v1alpha2-jobset.x-k8s.io
  admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: jobset-webhook-service
      namespace: kubeflow-system
      path: /validate-jobset-x-k8s-io-v1alpha2-jobset
  rules:
  - apiGroups:
    - jobset.x-k8s.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - jobsets
  sideEffects: None
- name: validate--v1-pod.x-k8s.io
  admissionReviewVersions:
  - v1
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  clientConfig:
    service:
      name: jobset-webhook-service
      namespace: kubeflow-system
      path: /validate--v1-pod
  objectSelector:
    matchExpressions:
    - key: jobset.sigs.k8s.io/jobset-name
      operator: Exists
  sideEffects: None
---
# Source: kubeflow-trainer/templates/webhook/validating_webhook_configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validator.trainer.kubeflow.org
  labels:
    helm.sh/chart: kubeflow-trainer-2.2.0
    app.kubernetes.io/name: kubeflow-trainer
    app.kubernetes.io/instance: ai-training
    app.kubernetes.io/version: "2.2.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/component: webhook
webhooks:
- name: validator.clustertrainingruntime.trainer.kubeflow.org
  admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ai-training-kubeflow-trainer-controller-manager
      namespace: kubeflow-system
      path: /validate-trainer-kubeflow-org-v1alpha1-clustertrainingruntime
  sideEffects: None
  failurePolicy: Fail
  rules:
  - apiGroups:
    - trainer.kubeflow.org
    apiVersions:
    - v1alpha1
    resources:
    - clustertrainingruntimes
    operations:
    - CREATE
    - UPDATE
- name: validator.trainingruntime.trainer.kubeflow.org
  admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ai-training-kubeflow-trainer-controller-manager
      namespace: kubeflow-system
      path: /validate-trainer-kubeflow-org-v1alpha1-trainingruntime
  sideEffects: None
  failurePolicy: Fail
  rules:
  - apiGroups:
    - trainer.kubeflow.org
    apiVersions:
    - v1alpha1
    resources:
    - trainingruntimes
    operations:
    - CREATE
    - UPDATE
- name: validator.trainjob.trainer.kubeflow.org
  admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: ai-training-kubeflow-trainer-controller-manager
      namespace: kubeflow-system
      path: /validate-trainer-kubeflow-org-v1alpha1-trainjob
  sideEffects: None
  failurePolicy: Fail
  rules:
  - apiGroups:
    - trainer.kubeflow.org
    apiVersions:
    - v1alpha1
    resources:
    - trainjobs
    operations:
    - CREATE
    - UPDATE
